tests/fixtures/kubernetes/good/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example
  name: example
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: example
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
              weight: 100
      containers:
        - image: debian:12-slim@sha256:f528891ab1aa484bf7233dbcc84f3c806c3e427571d73763b8b0f0ec7106c338
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          name: example
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: example
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: example
  name: example
  namespace: example
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: example
  podSelector:
    matchLabels:
      app: example
  policyTypes:
    - Ingress
